--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Chat Group App</title>
   </head>
-  <body>
+  <body class=" bg-gray-700">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class='h-screen'></div>
   </body>
 </html>
